@@ -1,5 +1,10 @@
 2008-03-20  Ian Jackson  <ian@davenant.greenend.org.uk>
 
+	* lib/dpkg.h (cisspace): New prototype.
+	* lib/utils.c (cisspace): New function definition.
+
+2008-03-20  Ian Jackson  <ian@davenant.greenend.org.uk>
+
 	* src/main.h (pkgadminfile): Move prototype to ...
 	* lib/dpkg-db.h: ... here.
 	* src/help.c (pkgadminfile): Move function definition to ...
